--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -43,7 +43,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Members: Sharon, Nilsu, Rushikesh"
+            android:text="Members: Sharon, Nilsu Bozan, Rushikesh"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             android:gravity="center"/>
