--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,25 +9,34 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.AudioApp">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.AudioApp" />
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
+
+    <TextureView
+        android:id="@+id/camera_preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar" />
+
+    <!-- If you're using include for content_main, ensure the TextureView does not overlap your content_main layout components -->
     <include layout="@layout/content_main" />
 
-    <!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
-    <!--        android:id="@+id/fab"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:layout_gravity="bottom|end"-->
-    <!--        android:layout_margin="@dimen/fab_margin"-->
-    <!--        app:srcCompat="@android:drawable/ic_dialog_email" />-->
+    <!-- Uncomment the FloatingActionButton if needed, adjust its layout attributes as necessary -->
+    <!-- <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+    <!--     android:id="@+id/fab"-->
+    <!--     android:layout_width="wrap_content"-->
+    <!--     android:layout_height="wrap_content"-->
+    <!--     android:layout_gravity="bottom|end"-->
+    <!--     android:layout_margin="@dimen/fab_margin"-->
+    <!--     app:srcCompat="@android:drawable/ic_dialog_email" /> -->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
