--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -175,6 +175,16 @@
         app:layout_constraintTop_toBottomOf="@+id/surfaceView" />
 
     <Button
+        android:id="@+id/click_pic_button"
+        style="@style/Widget.AppCompat.Button.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click Pic"
+        app:layout_constraintTop_toBottomOf="@+id/surfaceView"
+        app:layout_constraintStart_toEndOf="@+id/cameraButton"
+        android:layout_marginTop="16dp"/>
+
+    <Button
         android:id="@+id/pause2"
         style="@style/Widget.AppCompat.Button.Small"
         android:layout_width="wrap_content"
